--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <h1>Hello World!</h1>
+    <h1>Hello World, we are software developers!</h1>
 
     <!--
 
