--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 
 
-
+<H1>Hello World !</H1>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <h1>Hello World!</h1>
+    
 
     <!--
 
