changes made with Venga

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<H1>Hello World !</H1>
+<H1>Hello World , we are programmers!</H1>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     
 
